# ETG-RLM

./: README.md  pyproject.toml
.github/workflows/: eval.yml
etg_rlm/: __init__.py  ablations.py  algorithm.py  baselines.py  benchmark_runner.py  bounds.py  citation_metrics.py  core.py  datasets.py  evaluation.py  factscore.py  human_eval.py  logic_verification.py  metrics.py  pipeline.py  policy.py  reporting.py  self_check.py  statistics.py  type_system.py  verification.py
etg_rlm/views/: __init__.py  factory.py
results/: e2e_output.txt  real_evaluation_results.json  real_evaluation_v2_results.json  real_evaluation_v3_results.json  real_evaluation_v4_results.json  v4_run_output.txt
scripts/: download_data.py  e2e_quick.py  real_evaluation.py  real_evaluation_v2.py  real_evaluation_v3.py  real_evaluation_v4.py
tests/: test_ablations.py  test_algorithm.py  test_baselines.py  test_benchmark_runner.py  test_bounds.py  test_canonical_evaluation.py  test_citation_metrics.py  test_core.py  test_datasets.py  test_e2e_integration.py  test_evaluation.py  test_factscore.py  test_human_eval.py  test_logic_verification.py  test_metrics.py  test_pipeline.py  test_policy.py  test_reporting.py  test_self_check.py  test_statistics.py  test_type_system.py  test_verification.py  test_views.py
