[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etg-rlm"
version = "0.1.0"
description = "Evidence-Typed Generation: Faithfulness as a Type System for Recursive Language Models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["etg_rlm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
